c/src/test/resources/c/nec_bnc/invalid/ex10-17.ctrl
<controlFile>
  <sourceFile name="../ex10.c" id="1" />
  <run>
    <startPosition fileId="1" line="16" />
    <wayPoint fileId="1" line="18">
      <command>
        <cascadeFunction> cascade_assume </cascadeFunction>
        <argument>addr</argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="20">
      <command>
        <cascadeFunction> cascade_check </cascadeFunction>
        <argument><![CDATA[
          valid(&(addr->len))
        ]]></argument>
      </command>
    </wayPoint>
    <endPosition fileId="1" line="24" />
  </run>
</controlFile>